# nix-rust-esp32s3

./: .gitignore  .lnvim.fnl  .lnvim.lua  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
lsp/: Dockerfile
scripts/: build-lsp.sh  build.sh  flash.sh  run-lsp.sh
src/: bindings.h  esp32.rs  main.rs
ui/: appwindow.slint
