[package]
name = "test"
version = "0.1.0"
authors = ["Berkeley True <berkeleytrue@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }

[build-dependencies]
embuild = "0.32.0"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
debug = true
opt-level = "z"

[profile.release]
opt-level = 's'
